# NetAegis

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  inspection.db-shm  inspection.db-wal  pyproject.toml
backups/SH-MH-101-A01U45-H3CS6850-YL0-Hybrid-09/: 20260531T132240Z_24a3295c.cfg
backups/SH-MH-601-A04U4-H3CM9K-Int-FW-15001/: latest.cfg
backups/SH-MH-604-F19U40-RGS6990-G0-B04012/: 20260530T150645Z_d096c598.cfg  20260531T131717Z_0d1769e6.cfg
backups/SH-MH-M404-E02U49-HWUSG6655F-intFW-02002/: 20260531T131717Z_40bdf7c3.cfg  20260531T132239Z_c87d79f2.cfg
docs/: DESIGN-V2.0.md  DESIGN.md  DOCKER-DEPLOY.md
inventory/: 9825.csv  cmdb.csv  devices.csv  diff.txt  groups.yaml  template.csv
results/8973833840ef/: SH-MH-101-A01U45-H3CS6850-YL0-Hybrid-09_192.168.199.240.json  SH-MH-402-F09U9-RGS6980-G0-B03033_192.168.199.244.json  SH-MH-601-A04U4-H3CM9K-Int-FW-15001_192.168.199.242.json  SH-MH-604-F19U40-RGS6990-G0-B04012_192.168.199.243.json  SH-MH-M404-E02U49-HWUSG6655F-intFW-02002_192.168.199.241.json  summary.json  summary.txt
results/ad2c5c7f6889/: SH-MH-101-A01U45-H3CS6850-YL0-Hybrid-09_192.168.199.240.json  SH-MH-402-F09U9-RGS6980-G0-B03033_192.168.199.244.json  SH-MH-601-A04U4-H3CM9K-Int-FW-15001_192.168.199.242.json  SH-MH-604-F19U40-RGS6990-G0-B04012_192.168.199.243.json  SH-MH-M404-E02U49-HWUSG6655F-intFW-02002_192.168.199.241.json  summary.json  summary.txt
src/inspection/: __init__.py  backup_store.py  cli.py  config.py  db.py  logging_setup.py  (+6 more)
tests/: test_backup_store.py  test_csv_source.py  test_naming.py
(+15 files in other folders)
