[project]
name = "NetAegis"
version = "0.1.0"
description = "Automated network inspection & backup platform (Nornir + Netmiko + FastAPI)"
requires-python = ">=3.11"
dependencies = [
  "nornir>=3.4",
  "nornir-netmiko>=1.0",
  "nornir-utils>=0.2",
  "netmiko>=4.3",
  "ntc-templates>=4.0",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "sqlalchemy>=2.0",
  "python-dotenv>=1.0",
  "loguru>=0.7",
  "pyyaml>=6.0",
  "typer>=0.12",
  "apscheduler>=3.10",
  "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "ruff>=0.4",
]

[project.scripts]
inspect = "inspection.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/inspection"]

[tool.ruff]
line-length = 110
target-version = "py311"
